# RustApplication

./: build.gradle
app/: build.gradle
app/src/androidTest/java/de/selfmade4u/rustapplication/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/de/selfmade4u/rustapplication/: MainActivity.kt  RustGreetings.kt
app/src/main/res/values/: themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/de/selfmade4u/rustapplication/: ExampleUnitTest.kt
backend/: Cargo.toml  client-cert.pem  client-key.pem  server-cert.pem  server-key.pem
backend/src/: lib.rs  main.rs
gradle/wrapper/: gradle-wrapper.properties
