[package]
name = "backend"
version = "0.1.0"
edition = "2021"

#[lib]
#name = "backend"
#crate_type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jni = "0.19.0"
quinn = "0.8.4"
rustls = { version = "0.20.6" }
rcgen = "0.9.3"
rustls-pemfile = "1.0.1"
tokio = { version = "1", features = ["full"] }
futures-util = "0.3.23"